[package]
name = "test-mbedtls-dependency"
version = "0.1.0"
authors = ["Lily S <lsturman@redhat.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.mbedtls]
version = "0.4"
features = ["sgx"]

[patch.crates-io]
mbedtls = { git = "https://github.com/haraldh/rust-mbedtls", rev = "8cd4a575dd41cbc6a545e7fbd10d6924c8275f66" } # branch: master
